Fixing buttons and ability to toggle visibility by clicking the button

--- a/web/src/client/css/inc/_buttons.scss
+++ b/web/src/client/css/inc/_buttons.scss
@@ -29,6 +29,9 @@ button,
 
   &:hover {
     background-color: $action-light;
+    border: thin solid transparent !important;
+    box-shadow: none !important;
+    outline: 0 !important;
   }
 
   &:focus {
