--- a/web/src/client/css/layout/_menu.scss
+++ b/web/src/client/css/layout/_menu.scss
@@ -18,7 +18,6 @@
     padding: 0;
   }
   &[hidden] {
-    display: block;
     opacity: 0;
     transform: translateY(0);
     transition: visibility 0s ease 0.5s, transform $animationLength ease, opacity 0.2s ease;
